tests/files/type_checker_tests/should_fail/013.cmdr
//Should fail when doing post decrement on something that isn't a float or int
a = true;
x = a--;